--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TitanPocketKeyboard"
+        android:theme="@style/Theme.MinimalPocketKeyboard"
         tools:targetApi="31">
         <activity
             android:name=".SettingsActivity"
